--- a/src/styles/_baseBtn.scss
+++ b/src/styles/_baseBtn.scss
@@ -23,11 +23,11 @@
     }
 
     @include mediaQuery($sm) {
-        font-size: $fs-9 ;
+        font-size: $fs-9;
     }
 
     @include mediaQuery($xs) {
-        font-size: $fs-10 ;
+        font-size: $fs-10;
     }
 }
 
@@ -38,20 +38,20 @@
     border-radius: 20px 20px 5px 5px;
     width: 3em;
     height: 2em;
-    padding: .3em;
-    margin: .4em;
+    padding: 0.3em;
+    margin: 0.4em;
     text-align: center;
     transition: all 0.5s ease-in-out;
 
     @include mediaQuery($md) {
-        font-size: .7rem;
+        font-size: 0.7rem;
     }
 
     @include mediaQuery($sm) {
-        font-size: .6rem;
+        font-size: 0.6rem;
     }
 
     @include mediaQuery($xs) {
-        font-size: .5rem;
+        font-size: 0.5rem;
     }
 }
